<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/toolbar"
        android:layout_weight="0"/>
    
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <ImageView android:src="@drawable/profile_image"
	         android:id="@+id/profile_image"
	         android:contentDescription="@string/profile_image"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	        />
	    <TextView 
	        android:id="@+id/profile_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:layout_toRightOf="@id/profile_image"/>
	    <TextView 
	        android:id="@+id/profile_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title"
	        android:layout_toRightOf="@id/profile_image"
	        android:layout_below="@id/profile_name"/>
    </RelativeLayout>
    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/emails" />
	
    <ListView android:id="@+id/profile_email_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"	>
    </ListView>
    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/phone_numbers" />
	
    <ListView android:id="@+id/profile_phone_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"	>
    </ListView>

</LinearLayout>