<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/toolbar"
        android:layout_weight="0"
        android:layout_height="0dp"/>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
			<RelativeLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="0dp"
			    android:orientation="horizontal" >
			    
			    <ImageView
			        android:src="@drawable/profile_image"
			        android:id="@+id/profile_image"
			        android:contentDescription="@string/profile_image"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
				    android:layout_margin="4dp" />
			    
			    <TextView 
			        android:id="@+id/profile_name"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/name"
			        android:layout_toRightOf="@id/profile_image"
			        android:layout_alignTop="@id/profile_image"
				    android:layout_marginLeft="4dp"
				    android:textStyle="bold"
			        android:textSize="18sp" />

			    <TextView 
			        android:id="@+id/profile_title"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/title"
			        android:layout_alignLeft="@id/profile_name"
			        android:layout_toRightOf="@id/profile_image"
			        android:layout_below="@id/profile_name"
				    android:layout_margin="0dp"
			        android:textSize="16sp" />
		    </RelativeLayout>
		    
			<TextView
			    android:id="@+id/profile_emails_label"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/emails"
			    android:layout_marginTop="4dp"
			    android:layout_marginLeft="4dp"
			    android:layout_marginRight="4dp"
			    android:textSize="16sp"
			    android:textStyle="bold"
			     />
			
		    <LinearLayout android:id="@+id/profile_email_list"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" />
		    
			<TextView
			    android:id="@+id/profile_phones_label"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/phone_numbers"
			    android:layout_marginTop="4dp"
			    android:layout_marginLeft="4dp"
			    android:layout_marginRight="4dp"
			    android:textSize="16sp"
			    android:textStyle="bold"
			     />
			
		    <LinearLayout android:id="@+id/profile_phone_list"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" />
	    </LinearLayout>
	</ScrollView>
</LinearLayout>