<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
    <ImageButton
            android:id="@+id/contact_edit_call_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/call_number"
            android:scaleType="fitCenter"
            android:background="@drawable/blank"
            android:src="@drawable/phone" />

    <ImageButton
            android:id="@+id/contact_edit_txt_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@id/contact_edit_call_action"
            android:contentDescription="@string/text_number"
            android:scaleType="fitCenter"
            android:background="@drawable/blank"
            android:src="@drawable/texting" />

    <EditText android:id="@+id/contact_edit_phone_edit_text"
              android:layout_width="175dp"
              android:layout_height="wrap_content"
              android:layout_margin="4dp"
              android:hint="Phone" />
    <ImageButton
            android:id="@+id/contact_edit_phone_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/email"
            android:scaleType="fitCenter"
            android:background="@drawable/blank"
            android:src="@drawable/red_minus" />



</LinearLayout>